@@ -80,4 +80,4 @@
   #include <cwctype>
 #endif
 
-int main() { }
+int main() { return 0; }
