@@ -8,7 +8,7 @@
    <META NAME="GENERATOR" CONTENT="vi and eight fingers">
    <TITLE>libstdc++-v3 HOWTO:  Chapter 18</TITLE>
 <LINK REL=StyleSheet HREF="../lib3styles.css">
-<!-- $Id: howto.html,v 1.2 2001/04/03 00:26:55 pme Exp $ -->
+<!-- $Id: howto.html,v 1.3 2001/05/30 21:54:58 pme Exp $ -->
 </HEAD>
 <BODY>
 
@@ -171,7 +171,7 @@
             reverse order of registration, once per registration call.
             (This isn't actually new.)
         <LI>The previous two actions are &quot;interleaved,&quot; that is,
-            given this code:
+            given this pseudocode:
             <PRE>
               extern "C or C++" void  f1 (void);
               extern "C or C++" void  f2 (void);
@@ -265,7 +265,7 @@
 <P CLASS="fineprint"><EM>
 Comments and suggestions are welcome, and may be sent to
 <A HREF="mailto:libstdc++@gcc.gnu.org">the mailing list</A>.
-<BR> $Id: howto.html,v 1.2 2001/04/03 00:26:55 pme Exp $
+<BR> $Id: howto.html,v 1.3 2001/05/30 21:54:58 pme Exp $
 </EM></P>
 
 
