@@ -8,7 +8,7 @@
    <META NAME="GENERATOR" CONTENT="vi and eight fingers">
    <TITLE>libstdc++-v3 HOWTO:  Chapter 19</TITLE>
 <LINK REL=StyleSheet HREF="../lib3styles.css">
-<!-- $Id: howto.html,v 1.3 2001/04/03 00:26:55 pme Exp $ -->
+<!-- $Id: howto.html,v 1.4 2001/05/30 21:54:59 pme Exp $ -->
 </HEAD>
 <BODY>
 
@@ -59,8 +59,15 @@
 
 <HR>
 <H2><A NAME="2">Exception class hierarchy diagram</A></H2>
-   <P>The <A HREF="exceptions_hiearchy.pdf">diagram</A> is in PDF, or
-      at least it will be once it gets finished.
+   <P>At one point we were going to make up a PDF of the exceptions
+      hierarchy, akin to the one done for the I/O class hierarchy.
+      Time was our enemy.  Since then we've moved to Doxygen, which has
+      the useful property of not sucking.  Specifically, when the source
+      code is changed, the diagrams are automatically brought up to date.
+      For the old way, we had to update the diagrams separately.
+   </P>
+   <P>There are several links to the Doxygen-generated pages from
+      <A HREF="../documentation.html">here</A>.
    </P>
    <P>Return <A HREF="#top">to top of page</A> or
       <A HREF="../faq/index.html">to the FAQ</A>.
@@ -108,7 +115,7 @@
 <P CLASS="fineprint"><EM>
 Comments and suggestions are welcome, and may be sent to
 <A HREF="mailto:libstdc++@gcc.gnu.org">the mailing list</A>.
-<BR> $Id: howto.html,v 1.3 2001/04/03 00:26:55 pme Exp $
+<BR> $Id: howto.html,v 1.4 2001/05/30 21:54:59 pme Exp $
 </EM></P>
 
 
