@@ -8,7 +8,7 @@
    <META NAME="GENERATOR" CONTENT="vi and eight fingers">
    <TITLE>libstdc++-v3 HOWTO:  Chapter 22</TITLE>
 <LINK REL=StyleSheet HREF="../lib3styles.css">
-<!-- $Id: howto.html,v 1.3 2001/04/03 00:26:55 pme Exp $ -->
+<!-- $Id: howto.html,v 1.4 2001/08/08 02:48:58 bkoz Exp $ -->
 </HEAD>
 <BODY>
 
@@ -16,6 +16,10 @@
 
 <P>Chapter 22 deals with the C++ localization facilities.
 </P>
+<!-- I wanted to write that sentence in something requiring an exotic font,
+     like Cryllic or Kanji.  Probably more work than such cuteness is worth,
+     but I still think it'd be funny.
+ -->
 
 
 <!-- ####################################################### -->
@@ -176,7 +180,7 @@
    int main ()
    {
       std::string  s ("Some Kind Of Initial Input Goes Here");
-      Toupper      up ( std::locale("C") );
+      Toupper      up   ( std::locale("C") );
       Tolower      down ( std::locale("C") );
    
       // Change everything into upper case
@@ -210,7 +214,7 @@
 <P CLASS="fineprint"><EM>
 Comments and suggestions are welcome, and may be sent to
 <A HREF="mailto:libstdc++@gcc.gnu.org">the mailing list</A>.
-<BR> $Id: howto.html,v 1.3 2001/04/03 00:26:55 pme Exp $
+<BR> $Id: howto.html,v 1.4 2001/08/08 02:48:58 bkoz Exp $
 </EM></P>
 
 
