@@ -8,7 +8,7 @@
    <META NAME="GENERATOR" CONTENT="vi and eight fingers">
    <TITLE>libstdc++-v3 HOWTO:  Chapter 25</TITLE>
 <LINK REL=StyleSheet HREF="../lib3styles.css">
-<!-- $Id: howto.html,v 1.2 2001/04/03 00:26:56 pme Exp $ -->
+<!-- $Id: howto.html,v 1.3 2001/05/30 21:55:02 pme Exp $ -->
 </HEAD>
 <BODY>
 
@@ -38,7 +38,7 @@
       <OL>
         <LI>Anything that behaves like an iterator can be used in one of
             these algorithms.  Raw pointers make great candidates, thus
-            built-in arrays are fine containers.  So do your own iterators.
+            built-in arrays are fine containers, as well as your own iterators.
         <LI>The algorithms do not (and cannot) affect the container as a
             whole; only the things between the two iterator endpoints.  If
             you pass a range of iterators only enclosing the middle third of
@@ -87,7 +87,7 @@
 <P CLASS="fineprint"><EM>
 Comments and suggestions are welcome, and may be sent to
 <A HREF="mailto:libstdc++@gcc.gnu.org">the mailing list</A>.
-<BR> $Id: howto.html,v 1.2 2001/04/03 00:26:56 pme Exp $
+<BR> $Id: howto.html,v 1.3 2001/05/30 21:55:02 pme Exp $
 </EM></P>
 
 
